--- a/Candy/style.scss
+++ b/Candy/style.scss
@@ -62,7 +62,7 @@ section {
       left: 0;
       width: 100%;
       height: 220px;
-      border-bottom: 120px solid #bd0135;
+      border-bottom: 120px solid #b90c3c;
       background: linear-gradient(180deg, #7b0022 0%, #7d0024 28%, #c50e41 100%);
       box-sizing: border-box;
     }
