--- a/Candy/style.css
+++ b/Candy/style.css
@@ -79,7 +79,7 @@ section .slider::before {
   left: 0;
   width: 100%;
   height: 220px;
-  border-bottom: 120px solid #bd0135;
+  border-bottom: 120px solid #b90c3c;
   background: -webkit-gradient(linear, left top, left bottom, from(#7b0022), color-stop(28%, #7d0024), to(#c50e41));
   background: linear-gradient(180deg, #7b0022 0%, #7d0024 28%, #c50e41 100%);
   -webkit-box-sizing: border-box;
