--- a/ui/Tea/style.css
+++ b/ui/Tea/style.css
@@ -22,7 +22,6 @@ body {
   overflow: hidden;
   z-index: -1;
 
-
   background: #ffffff;
   box-shadow:  20px 20px 60px #d9d9d9, 
               -20px -20px 60px #ffffff;
@@ -61,20 +60,6 @@ body {
   background: linear-gradient(#a26d5a, #67290c);
   border-radius: 50%;
 }
-
-/* .handle {
-  position: absolute;
-  right: -55px; top: 30px; width: 120px; height: 170px;
-  border: 20px solid #ca7c44;
-  border-left: 5px solid #fff;
-  border-bottom: 15px solid #fff;
-  border-radius: 50%;
-  transform: rotate(42deg);
-  z-index: -2;
-
-  box-shadow:  20px 20px 60px #d9d9d9, 
-              -20px -20px 60px #ffffff;
-} */
 
 .line {
   position: absolute;
@@ -130,3 +115,17 @@ body {
   95% {opacity: 0;}
   100% {transform: translateY(-300px) scaleX(10)}
 }
+
+/* .handle 손잡이 위치만 배치해둠 {
+  position: absolute;
+  right: -55px; top: 30px; width: 120px; height: 170px;
+  border: 20px solid #ca7c44;
+  border-left: 5px solid #fff;
+  border-bottom: 15px solid #fff;
+  border-radius: 50%;
+  transform: rotate(42deg);
+  z-index: -2;
+
+  box-shadow:  20px 20px 60px #d9d9d9, 
+              -20px -20px 60px #ffffff;
+} */
