디렉토리 순서 수정

--- a/ui/2-Flower/style.scss
+++ b/ui/2-Flower/style.scss
@@ -30,7 +30,7 @@ section {
 
   /* 대리석 6각형 */
   .square {
-    background-image: url("./img/flower/0.png");
+    background-image: url("./img/0.png");
     position: absolute; 
     top: 0; 
     bottom:0; 
