--- a/ui/2-Flower/style.css
+++ b/ui/2-Flower/style.css
@@ -59,7 +59,7 @@ section img {
 }
 
 section .square {
-  background-image: url("./img/flower/0.png");
+  background-image: url("./img/0.png");
   position: absolute;
   top: 0;
   bottom: 0;
