--- a/ui/11-Spinner-effect/style.scss
+++ b/ui/11-Spinner-effect/style.scss
@@ -28,7 +28,7 @@ body {
     // filter: grayscale(100%) brightness(.7); // 그레이 필터
   }
 
-  .splite-text {
+  .split-text {
     position: absolute;
     z-index: 3;
     left: 50%;
