--- a/ui/11-Spinner-effect/style.css
+++ b/ui/11-Spinner-effect/style.css
@@ -36,7 +36,7 @@ body {
   border: 1px solid #252525;
 }
 
-.intro .splite-text {
+.intro .split-text {
   position: absolute;
   z-index: 3;
   left: 50%;
@@ -49,7 +49,7 @@ body {
   white-space: nowrap;
 }
 
-.intro .splite-text span {
+.intro .split-text span {
   display: inline-block;
   white-space: pre;
 }
