--- a/ui/6-Snow/style.scss
+++ b/ui/6-Snow/style.scss
@@ -19,7 +19,7 @@ body {margin: 0;}
 .wrapper {
   width: 100%;
   height: 100vh;
-  background: #e6edf5;
+  background: #ebf1f9;
   overflow: hidden;
 
   .winter1 {
