--- a/ui/5-1-Car-parallax/style.css
+++ b/ui/5-1-Car-parallax/style.css
@@ -19,9 +19,9 @@ body {
 
 .zoom {
   width: 100%;
-  height: 100vw;
+  height: 100vh;
   min-height: 580px;
-  max-height: 600px;
+  max-height: 700px;
   position: relative;
   overflow: hidden;
   background: #e0e0e0;
@@ -98,8 +98,8 @@ body {
   width: 100%;
   max-width: 720px;
   z-index: 9;
-  -webkit-transform: translateX(-65%) translateY(45px);
-          transform: translateX(-65%) translateY(45px);
+  -webkit-transform: translateX(-65%) translateY(-5px);
+          transform: translateX(-65%) translateY(-5px);
 }
 
 .zoom #text {
@@ -110,8 +110,9 @@ body {
   margin: auto;
   z-index: 999;
   font-size: 40px;
-  -webkit-transform: translateY(21%);
-          transform: translateY(21%);
+  -webkit-transform: translateY(31%);
+          transform: translateY(31%);
+  text-shadow: 3px -3px 3px #bbbbbb;
 }
 
 .content {
@@ -127,5 +128,6 @@ body {
 .content p {
   font-size: 1.2rem;
   color: #b5b5b5;
+  word-break: break-all;
 }
 /*# sourceMappingURL=style.css.map */
