--- a/ui/11-20/15-Flower-cursor/style.css
+++ b/ui/11-20/15-Flower-cursor/style.css
@@ -18,6 +18,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background: #f9feff;
   font-family: 'NewYorkFont', serif;
   cursor: none;
 }
@@ -29,7 +30,7 @@ body > * {
 .content {
   width: 700px;
   height: 400px;
-  background-color: #fffdf0;
+  background-color: #fffefb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,10 +38,11 @@ body > * {
   border-radius: 10px;
   -webkit-box-shadow: -1px 5px 8px 2px #f1f1f1;
           box-shadow: -1px 5px 8px 2px #f1f1f1;
+  opacity: 0.8;
 }
 
 .content:hover {
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .content > * {
@@ -49,7 +51,7 @@ body > * {
 
 .content h1 {
   text-transform: uppercase;
-  font-size: 130px;
+  font-size: 100px;
   color: #114d5b;
   position: relative;
 }
