--- a/ui/11-20/19-Water/style.scss
+++ b/ui/11-20/19-Water/style.scss
@@ -2,6 +2,8 @@
 @import '../../fonts/_fonts';
 @include font-face("allright", "../../fonts/allright", 700, "woff");
 
+$wh: 600px;
+
 body {
   font-family: 'allright', serif;
 
@@ -29,8 +31,8 @@ body {
 }
 
 .glass{
-  height: 600px;
-  width: 600px;
+  height: $wh;
+  width: $wh;
   border-radius: 50%;
   position:absolute;
 
@@ -41,8 +43,8 @@ body {
   filter: blur(60px);
 }
 .water { 
-  height: 600px;
-  width: 600px;
+  height: $wh;
+  width: $wh;
   border-radius: 50%;
   background: #ddf8ff;
   position:absolute;
@@ -51,22 +53,21 @@ body {
 
   border: 2px solid #afefff;
   box-shadow: 0px 10px 20px #95eaff;
-}
 
-.wave {
-  background: url('./img/wave.png') repeat-x; 
-  position: absolute;
-  width: 5000px;
-  height: 400px;
-  bottom: -30px;
-  animation: wave 3s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-  transform: translate3d(0, 0, 0);
-}
-
-.wave:nth-of-type(2) {
-  animation: wave  3s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.12s infinite,
-             swell 3s ease -1.25s infinite;
-  opacity: 1;
+  .wave {
+    background: url('./img/wave.png') repeat-x; 
+    position: absolute;
+    width: 5000px;
+    height: 400px;
+    bottom: -30px;
+    animation: wave 3s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
+    transform: translate3d(0, 0, 0);
+  }
+  .wave:nth-of-type(2) {
+    animation: wave  3s cubic-bezier(0.36, 0.45, 0.63, 0.53) -.12s infinite,
+              swell 3s ease -1.25s infinite;
+    opacity: 1;
+  }
 }
 
 @keyframes wave {
