--- a/ui/11-20/19-Water/style.css
+++ b/ui/11-20/19-Water/style.css
@@ -61,7 +61,7 @@ body h2 {
           box-shadow: 0px 10px 20px #95eaff;
 }
 
-.wave {
+.water .wave {
   background: url("./img/wave.png") repeat-x;
   position: absolute;
   width: 5000px;
@@ -73,7 +73,7 @@ body h2 {
           transform: translate3d(0, 0, 0);
 }
 
-.wave:nth-of-type(2) {
+.water .wave:nth-of-type(2) {
   -webkit-animation: wave 3s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.12s infinite, swell 3s ease -1.25s infinite;
           animation: wave 3s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.12s infinite, swell 3s ease -1.25s infinite;
   opacity: 1;
