--- a/ui/11-20/14-Diagonal/style.scss
+++ b/ui/11-20/14-Diagonal/style.scss
@@ -1,4 +1,5 @@
-@import '../../fonts/_fonts';
+@import '../../utils/fonts';
+
 @include font-face("NewYorkFont", "../../fonts/NewYork-PERSONAL-USE", 700, "woff");
 
 $bg-grey: #eee;
