--- a/ui/11-20/16-Signup/style.scss
+++ b/ui/11-20/16-Signup/style.scss
@@ -1,4 +1,5 @@
-@import '../../fonts/_fonts';
+@import '../../utils/fonts';
+
 @include font-face("Letters-for-Learners", "../../fonts/Letters-for-Learners", 700, "woff");
 
 
